push filter down for mobile to avoid admin bar overlap

--- a/src/css/facet-template.css
+++ b/src/css/facet-template.css
@@ -151,6 +151,7 @@
         top: 0;
         width: 100%;
         height: 100vh;
+        padding: 5rem 1rem;
         max-width: 60vw;
         z-index: 99;
         transition: left .3s ease-in 0s;
